<resources>
    <string name="app_name">House Pick</string>
    <string name="title_real_estate">Real Estate</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_profile">Profile</string>
    <string name="title_ads">Ads</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <!--login string-->
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="bad_email_password">Bad email/password, try again</string>
    <string name="password_changed">Password changed</string>
    <string name="error_from_server">Error from server</string>
    <string name="account_created">Account created</string>
    <string name="bad_mail_address">Bad mail address</string>
    <string name="passwords_must_correspond">Passwords must correspond</string>
    <string name="bad_arguments_try_again">Bad arguments, try again</string>
    <!-- add ads string -->
    <string name="editTextTitleHint">Title</string>
    <string name="imageContentDescription">Real Estate</string>
    <string name="imgAddButtonContentDescription">Set image button</string>
    <string name="locationButtonContentDescription">Set location button</string>
    <string name="editTextAddressHint">Street</string>
    <string name="editTextCityHint">City</string>
    <string name="editTextCountryHint">Country</string>
    <string name="editTextPostalCodeHint">Postal code</string>
    <string name="editTextDescriptionHint">Description</string>editTextEstateTypeHint
    <string name="editTextEstateTypeHint">Estate type</string>
    <string name="editTextEstatePriceHint">Estate price Rial</string>
    <string name="switchRent">Rent</string>
    <string name="bedStartNumber">0</string>
    <string name="bathroomStartNumber">0</string>
    <string name="garageStartNumber">0</string>
    <string name="editTextEmailHint">Contact email</string>
    <string name="editTextPhoneHint">Contact phone</string>createAdsButton
    <string name="createAdsButton">Create</string>
    <string name="no_houses_found">No houses found for this location</string>
    <string name="network_error">Network error</string>
    <string name="housing_deleted_success">Housing successfully deleted</string>
    <string name="housing_delete_failed">Couldn\'t delete the housing</string>
    <string name="no_image_selected">No image selected</string>
    <string name="ad_created">Ad created</string>
    <string name="invalid_form">Invalid form</string>
    <string name="address_doesnt_exist">This address doesn\'t exist</string>
    <string name="my_ads">My ads</string>
    <string name="search_ads">Search ads</string>
    <string name="rial">Rial</string>
    <string name="text_for">for</string>
    <string name="sell">sell</string>
    <string name="rent">rent</string>
    <string name="recommended_ad_label">Recommended Ad</string>
    <string name="price_status">Price Status</string>
    <string name="normal_status">Normal</string>
    <string name="appropriate">Appropriate</string>
    <string name="inappropriate">Inappropriate</string>

    <!-- profile strings -->
    <string name="profileImageContentDescription">Your profile</string>
    <string name="profileAgencySwicth">Agency</string>
    <string name="profileNotificationSwicth">Allow notifications</string>
    <string name="profileUpdatePasswordButton">Update password</string>
    <!-- Map strings -->
    <string name="editTextSearchHint">Search</string>


    <string name="channel_name">Notifications</string>
    <string name="channel_description">rien</string>
    <string name="disconnect">Disconnect</string>
    <string name="sign_out">Sign out</string>
    <string name="map">Map</string>
    <string name="confirm_location">Confirm Location</string>

    <string name="enable_gps_title">Enable GPS</string>
    <string name="enable_gps_message">Your location services are disabled. Please enable it to proceed.</string>
    <string name="enable_button">Enable</string>
    <string name="cancel_button">Cancel</string>


    <!-- ai chat -->
    <string name="hint_type_message">Type your message…</string>
    <string name="send_message">Send Message</string>
    <string name="ai_response_hint">AI Response will appear here</string>
    <string name="ai_chat">AI</string>

    <string name="choose_language">Choose Language</string>
    <string-array name="language_options">
        <item>English</item>
        <item>Persian</item>
    </string-array>
</resources>