<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ui.register.RegisterFragment">

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="44dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="50sp"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="26dp"
        android:background="@drawable/et_custom"
        android:gravity="start|center_vertical"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:layoutDirection="locale"
        android:padding="15dp"
        android:textColor="@color/greyDark"
        android:textColorHint="@color/greyLight"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="26dp"
        android:background="@drawable/et_custom"
        android:gravity="start|center_vertical"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:layoutDirection="locale"
        android:padding="15dp"
        android:textColor="@color/greyDark"
        android:textColorHint="@color/greyLight"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="26dp"
        android:background="@drawable/et_custom"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColor="@color/greyDark"
        android:textColorHint="@color/greyLight"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_repassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/et_custom"
        android:hint="@string/re_type_password"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColor="@color/greyDark"
        android:textColorHint="@color/greyLight"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/btn_custom"
            android:text="@string/register"
            android:textColor="@color/white" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_above="@id/swipeLeft"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_arrow_right" />

        <TextView
            android:id="@+id/swipeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="@string/swipe_right_for_login"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

    </RelativeLayout>

</LinearLayout>